using UnityEngine;
using System.Collections;

public abstract class AbstractBuildNode : MonoBehaviour
{
    public bool occupied = false;
}
